tests/cases/compiler-development/artifact/errors/diagnostic-parser-expected.diagnostic
diagnostic error code=P0001 family=parser message="unterminated function body" @ tests/cases/compiler-development/artifact/errors/diagnostic-parser-expected.ari:3:1
